applications/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visitor-app-service
  namespace: prod
  labels:
    app: visitor-app
    environment: prod
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
    protocol: TCP
    name: http
  selector:
    app: visitor-app
    environment: prod
